@@ -222,6 +222,7 @@ test tailcall-9 {tailcall factorial} -setup {
 } -result {1 120 3628800 1307674368000}
 
 test tailcall-10a {tailcall and eval} -constraints {knownBug} -setup {
+    set ::x 0
     proc a {} {
 	eval [list tailcall lappend ::x 2]
 	set ::x 1
@@ -230,9 +231,10 @@ test tailcall-10a {tailcall and eval} -constraints {knownBug} -setup {
     list [a] $::x
 } -cleanup {
     unset -nocomplain ::x
-} -result {{1 2} {1 2}}
+} -result {{0 2} {0 2}}
 
 test tailcall-10b {tailcall and eval} -setup {
+    set ::x 0
     proc a {} {
 	eval {tailcall lappend ::x 2}
 	set ::x 1
@@ -241,7 +243,7 @@ test tailcall-10b {tailcall and eval} -setup {
     list [a] $::x
 } -cleanup {
     unset -nocomplain ::x
-} -result {{1 2} {1 2}}
+} -result {{0 2} {0 2}}
 
 test tailcall-11a {tailcall and uplevel} -setup {
     proc a {} {
